# kedro-poc

./: JenkinsFile  docker-compose.yml
kedro/: DockerFile  README.md  pyproject.toml
kedro/.viz/: stats.json
kedro/conf/base/: catalog.yml  parameters_machinelearning.yml
kedro/data/: session_store.db
kedro/data/03_primary/: diabetes.csv
kedro/data/06_models/model.pkl/2025-02-10T12.33.10.221Z/: log.json
kedro/data/07_model_output/evaluation-metrices.csv/2025-02-10T11.01.30.738Z/: evaluation-metrices.csv
kedro/data/07_model_output/evaluation-metrices.csv/2025-02-10T11.05.06.768Z/: evaluation-metrices.csv
kedro/data/09_tracking/evaluation-metrics.json/2025-02-13T09.17.13.131Z/: evaluation-metrics.json
kedro/data/09_tracking/evaluation-metrics.json/2025-02-13T09.18.53.692Z/: evaluation-metrics.json
kedro/notebooks/: book1.ipynb
kedro/src/get_started/: __init__.py  __main__.py  settings.py
kedro/src/get_started/pipelines/machinelearning/: __init__.py  nodes.py  pipeline.py
kedro/tests/pipelines/machinelearning/: test_pipeline.py
server/: DockerFile  app.py
